--- a/IM-161-Assignment-2-Styles.css
+++ b/IM-161-Assignment-2-Styles.css
@@ -1,6 +1,53 @@
 nav{
     padding:50px;
-    background-color:black;
+    background-color:gray;
     color: white;
     align-content: center;
 }
+p2 {
+    text-align: center;
+    text-size-adjust: 13;
+    font-family: Arial, Helvetica, sans-serif;
+
+  }
+  h2 {
+    text-align: center;
+    font-family: "Arial", "Courier New", monospace;
+    text-decoration: solid;
+  }
+  
+  img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+  }
+  
+  h1 {
+    text-align: center;
+    text-size-adjust: 20;
+    text-decoration-color: black;
+    text-decoration: underline;
+
+  }
+
+  .nav {
+    margin-top: 0 !important;
+  }
+
+
+
+  @media screen and (min-width: 480px){
+    img
+     {margin-left: 216px}
+      {width: 200px; float: left;}
+   }
+   @media screen and (min-width: 768px)and 
+     (max-width: 1023px){
+     {margin-left: 216px}
+      {width: 200px; float: left;}
+   }
+   @media screen and (max-width: 767px){
+     {margin-left: 216px}
+      {width: 200px; float: left;}
+   }
